[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue with workers, retries, and DLQ"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.0",
]

[project.scripts]
queuectl = "queuectl.cli:app"
